--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,71 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  background-color: silver;
+}
+
+.container {
+  background-color: lightslategrey;
+  width: 80%;
+  margin: 0 auto;
+  padding: 1rem;
+}
+
+.row {
+  display: flex;
+}
+
+/* by component tag */
+app-root {
+  color: white;
+  background-color: lightpink; /*this is the one does not work*/
+}
+
+.box1 {
+  width: auto;
+  height: auto;
+  border: 1px solid red;
+}
+
+.span1 {color: red;}
+.span2 {color: yellow;}
+
+/*.bg {
+  color: black;
+}*/
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+section {
+  display: table;
+}
+
+.example-label {
+  display: table-cell;
+  font-size: 14px;
+  margin-left: 8px;
+  min-width: 120px;
+}
+
+.example-button-row {
+  display: table-cell;
+  width: 490px;
+}
+
+.example-button-row .mat-button-base {
+  margin: 8px 8px 8px 0;
+}
+
+.example-flex-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.example-button-container {
+  display: flex;
+  justify-content: center;
+  width: 120px;
+}
+
