updating angular13 to angular 14

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,304 +1,12 @@
-<h1>{{title}}</h1>
-<div>
-  <p>state:</p>
-  <ul>
-    <li *ngFor="let todo of todos">
-      {{todo}}
-      <button (click)="deleteTodo(todo)">Delete</button>
-      <button (click)="editTodo(todo)">Edit</button>
-    </li>
-  </ul>
+<app-header></app-header>
 
-</div>
+<div class="container">
+  <app-notify [inputId]="'--notify'"></app-notify>
 
-<app-input-todo></app-input-todo>
-
-<p>________</p>
-<p>Another version of todo app. No observables, and ... not implemented yet</p>
-
-<ul>
-  <li *ngFor="let todo of todos2">
-    {{todo}}
-    <button (click)="deleteTodo(todo)">Delete</button>
-    <button (click)="editTodo(todo)">Edit</button>
-  </li>
-</ul>
-
-
-
-<p>________</p>
-<p>Another version of todo app. State management with Akita</p>
-<ul>
-  <li *ngFor="let todo of atodos$ | async">
-    {{todo}}
-    <button (click)="adeleteTodo(todo)">Delete</button>
-    <button (click)="edit(todo)">Edit</button>
-  </li>
-</ul>
-
-<div *ngIf="!isEditing">
-  <input [(ngModel)]="todo"  (keyup.enter)="aaddTodo()">
-  <button (click)="aaddTodo()">Add</button>
-</div>
-
-<div *ngIf="isEditing">
-  <input [(ngModel)]="newTodoValue" (keyup.enter)="update()">
-  <button (click)="update()">Update</button>
-</div>
-
-<button (click)="agetTodos()" >test query</button>
-<button (click)="aaddTodo()" >add todo</button>
-
-
-
-<p>________</p>
-<p>Parent-child communication</p>
-<app-show-number [numberFromParent]="parnum"></app-show-number>
-<button (click)="handleIncrease()">Increase</button>
-
-<p>________</p>
-<h1>HostListener in component.ts</h1>
-<h2>Hello, you have clicked {{counter}} number of times!</h2>
-<button (click)="resetCounter()">Reset Counter</button>
-
-<p>________</p>
-<h1>HostListener in a Custom Directive</h1>
-<h4 appLightUp
-    class="idk ml-4"
->Click on this to change background</h4>
-
-<p>________</p>
-<h1>HostListener & HostBinding in a Custom Directive</h1>
-<h4 appTest
-    class=""
->Hover over this</h4>
-
-<p>________</p>
-<h1>HostListener & HostBinding in a Custom Directive</h1>
-<h4 appTest2
-    class=""
->Hover over this & click</h4>
-
-<p>________</p>
-<h1>HostListener & HostBinding in a Custom Directive</h1>
-<input
-  appProp
-  (action)="handleAction($event)"
-  type="text"
-  [(ngModel)]="boxData"
-/>
-<p>{{message}}</p>
-
-<p> ______________</p>
-<h2> Notification service + Notify component</h2>
-<app-notify [inputId]="'--notify'"></app-notify>
-<button (click)="sendNotification()">Click button to send notification</button>
-
-<p> ______________</p>
-<h2 style="color: lightgreen"
-    [style]="'background: grey'"
-> Template reference #variable </h2>
-<!--  https://angular.io/guide/template-reference-variables  -->
-<p>on a component, the variable refers to the component instance.</p>
-
-<ng-template #template1 let-ctx="ctx" name="tryTemplateOut">
-  <p style="color: aqua"> on ng-template refers to a TemplateRef instance</p>
-<!--  <button (click)="logCtx(ctx)">log ctx</button>
-  <p>Btw, this is ng-template. To show this, use [ngTemplateOutlet] on ng-container or div</p>-->
-</ng-template>
-<ng-template #template2 let-person>
-  <p>{{person.name}} is a {{person.job}}</p>
-</ng-template>
-
-<!--one way to display ng-template contents-->
-<div [ngTemplateOutlet]="template1"
-     [ngTemplateOutletContext]="{$implicit: 'this is implicit value', ctx: 'this is ctx value'}"
-></div>
-<!--another way, shall work with div -->
-<ng-content *ngIf="false; else template1"></ng-content>
-<ng-container *ngIf="false; else template1"></ng-container>
-<!--send this template to a component to use this template, must send it to @Input()-->
-<app-display-template [inputTemplate]="template1"></app-display-template>
-<app-display-template>
-  <p #para >paragraph element inside app-display-template tags</p>
-</app-display-template>
-
-<button (click)="logTemplate(template1)">console.log template</button>
-<div *ngIf="template1"><p>*ngIf="tempVar"</p></div>
-<br><br>
-
-<!--<div dropdown>
-  <button dropdownToggle>{{selected}}</button>
-  <ul dropdownMenu>
-    <li *ngFor="let option of options" (click)="selectOption(option)" )>
-      {{option}}
-    </li>
-  </ul>
-</div>-->
-<!-- this template has take use of username provided in component and render it -->
-<h2 style="color:mediumvioletred">app-select-string</h2>
-<app-select-string
-  [displayList]="customers_obj"
-  [displayTemplate]="template2"
->
-<!--  here you can define another template and access it with @ContentChild-->
-</app-select-string>
-<br>
-<br>
-<!-- now I have *ngFor, each item will display a template
-(it is no point to use template in this case, because you have all variables in the scope, right?) -->
-<ng-template #forCustomerObjects>
-  <!-- why to use template: -to send some template data to the component
-        - will I not send data with ngFor="let i of items" <comp [input]="i"> ?
-        - not if *ngFor is defined inside component
-        - I think if I want to send url link for each item in array
-   -->
-</ng-template>
-<div [ngTemplateOutlet]="forCustomerObjects"></div>
-
-<input #phone placeholder="phone number" />
-<button (click)="callPhone(phone.value)">Call</button>
-<div *ngIf="isCalling"
-  style="  border: solid 2px black;  border-radius: 4px;  color: lightgreen;">
-  <p>Calling: {{phone.value}}</p>
-</div>
-<!-- phone refers to the input element; pass its `value` to an event handler -->
-<!--<button type="button" (click)="callPhone(phone.value)">Call</button>-->
-<!--<button type="button">Call</button>-->
-<p>template variable (on HTML tag, refers to the element.) phone.value: {{phone.value}}</p>
-<p>updates on click. why?</p>
-
-<h2 style="color: lightgreen"> Template input #variable </h2>
-<ul>
-  <li *ngFor="let customer of customers">{{customer}}</li>
-</ul>
-
-<p> ______________</p>
-<h2> $event object </h2>
-<!--(event)="statement"-->
-<button mat-button
-  (click)="logEvent($event)"
-> Log $event object (of type MouseEvent)to console</button>
-<p
-  [attr.style]="'color: orange; font-size: 1.5rem'"
->select element emit {{selectedSelect}}.
-  This is styled through [attr.style]</p>
-<!--if you want to default selected value to match selectedSelect,
- then need to bind [itemsPerPage]="selectedSelect"-->
-<app-select
-  [itemsPerPage]="selectedSelect"
-  (selectedItemsPerPage)="outEvent($event)"
-></app-select>
-
-<p> ______________</p>
-<h2> Paginator</h2>
-
-<p>list of items</p>
-
-<ol [start]="itemsOffset+1">
-  <li
-    *ngFor="let item of pageItems | PaginatorPipe:itemsOffset:itemsPerPage"
-  >{{item}}</li>
-</ol>
-<div class="row">
-  <app-select
-    [itemsPerPage]="itemsPerPage"
-    (selectedItemsPerPage)="changeItemsPerPage($event)"
-  ></app-select>
-  <app-paginator
-    [itemsOffset]="itemsOffset"
-    [itemsPerPage]="itemsPerPage"
-    [totalItems]="pageItems.length"
-    (changeItemOffset)="setItemOffset($event)"
-  ></app-paginator>
-</div>
-
-<p> ______________</p>
-<h2> FormControls </h2>
-<h2> Template binds directly to control through FormGroup </h2>
-<p>formControlName - corresponds to a key of control inside formGroup</p>
-<form [formGroup]="form1" (ngSubmit)="submitHandler()">
-  <input formControlName="email" />
-  <input formControlName="password" />
-  <button type="submit" [disabled]="!form1.valid">Submit</button>
-</form>
-<p> form1: {{form1.value | json}}</p>
-
-<h2> Template binds directly to FormControl </h2>
-<div>
-  <input [formControl]="email">
-  <input [formControl]="password">
-  <button type="submit" [disabled]="!form2.valid">Submit</button>
-</div>
-<p> form2: {{form2.value | json}}</p>
-
-<h2> FormGroup inside FormGroup </h2>
-<div [formGroup]="form3" >
-  <input formControlName="title" >
-
-  <div formGroupName="address_group" >
-    <input formControlName="street" >
-    <input formControlName="city" >
-
-    <div formGroupName="code_group">
-      <input formControlName="zip" >
-      <input formControlName="num" >
-
-    </div>
+  <div class="card">
+    <router-outlet></router-outlet>
   </div>
+
+  <app-generics></app-generics>
 </div>
-<p>form: {{form3.value | json}}</p>
-<button (click)="logForm3()">Log to console</button>
-
-<h2> FormGroup with FormArray(FormGroup(controls)) </h2>
-
-<div [formGroup]="form4">
-
-  <input formGroupName="title" >
-
-  <div formArrayName="cars" >
-
-    <div *ngFor="let c of cars.controls; let i=index">
-
-      <!-- The repeated formArray template -->
-      <div [formGroupName]="i">
-        <input formControlName="model">
-        <input formControlName="year">
-
-      </div>
-    </div>
-  </div>
-  <button (click)="addCar()">Add car</button>
-</div>
-<p>form: {{form4.value | json}}</p>
-
-<p> ______________</p>
-<h2> literals </h2>
-
-<!--<button click="myFunction">Click</button>-->
-<!--<button (click)="myFunction">Click</button>-->
-<!--<button (click)="'myFunction'">Click</button>-->
-<!--<button (click)="'{{myFunction}}'" >Click</button>-->
-
-<!--
-app-notify (hb-notify) - styres av notify component. den bare slår på og av.
-  den setter en hb-callout in i hb-notify
-  kommer fra designsystem-angular-core / meddelelser
-hb-callout - en component som tar diverse @Input() for å sette styling på meldingen
-  kommer fra designsystem-angular-core / callout
-
-notify component subscribes to NotifyService (angular-starter / services)
-  #1 bruk Eksempel "Informasjonsmeldinger".
-  NotifyService.notify() - for å sende notification (brukes på en knapp).
-  da vil den <hb-notify> fange den opp til slutt og vise meldingen
-  #2 bruk Eksempel "Feilhåndtering".
-  går via EksempelDataService -> EksempelService - det er en backend som sender error 500
-
-  interceptor (husbanken-design / interceptors) oppdager error 500 og bruker NotifyService.notify()
-    (den trenger en oppdatering uncaught-exception-handler.ts 34 negativ -> DESTRUCTIVE
-
-designsystem-angular-forms ->skjemaliste.component.ts
-  - start using FormControl<>
--->
-
 
