--- a/src/styles.css
+++ b/src/styles.css
@@ -4,9 +4,18 @@ body {
   background-color: silver;
 }
 
+.card {
+  background-color: lightgrey;
+  padding: 20px;
+  margin: 10px;
+  border: 2px solid darkgray;
+  border-radius: 6px;
+  color: black;
+}
+
 .container {
   background-color: lightslategrey;
-  width: 80%;
+  width: min(86%, 800px);
   margin: 0 auto;
   padding: 1rem;
 }
@@ -25,6 +34,14 @@ app-root {
   width: auto;
   height: auto;
   border: 1px solid red;
+}
+
+.card-child {
+  padding: 15px;
+  margin: 8px 0;
+  background-color: lightsteelblue;
+  border-radius: 6px;
+  box-shadow: 6px 6px 4px gray;
 }
 
 .span1 {color: red;}
